# ChatSubtitle

./: .gitignore  LICENSE  README.md  build_error_log.txt  default.aproj  dll.aardio  main.aardio
.build/: default.Manifest.xml
.md/: temp2.md
forms/: formconfig.aardio  formlogger.aardio  formtools.aardio  markdown.aardio
lib/: bili.aardio  config.aardio
lib/chatgpt/: _.aardio  prompt.txt  summary.aardio
lib/chatgpt/.dll/: vali.py
lib/chatgpt/.dll/src/rust/: dll.aardio
lib/chatgpt/.dll/src/rust/tiktoken_dll/: Cargo.toml
lib/chatgpt/.dll/src/rust/tiktoken_dll/.cargo/: config.toml
lib/chatgpt/.dll/src/rust/tiktoken_dll/src/: lib.rs
lib/whisper/: _.aardio
res/: index.html
