[package]
name = "tiktoken_dll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tiktoken_dll" 
crate-type = ["cdylib"]

[dependencies]
tiktoken = { git="https://github.com/anysphere/tiktoken-rs.git" }
lazy_static = "1.4"